tests/exceptions/output/ownership/syntaxerror.txt

[33m[1mTraceback (most recent call last):[0m

  File "[32mtests/exceptions/source/ownership/[0m[32m[1msyntaxerror.py[0m", line [33m19[0m, in [35m<module>[0m
    [1mtest[0m[1m([0m[1mbacktrace[0m[35m[1m=[0m[36m[1mTrue[0m[1m,[0m [1mcolorize[0m[35m[1m=[0m[36m[1mTrue[0m[1m,[0m [1mdiagnose[0m[35m[1m=[0m[36m[1mTrue[0m[1m)[0m
    [36m└ [0m[36m[1m<function test at 0xDEADBEEF>[0m

> File "[32mtests/exceptions/source/ownership/[0m[32m[1msyntaxerror.py[0m", line [33m14[0m, in [35mtest[0m
    [1msyntaxerror[0m[1m([0m[1m)[0m
    [36m└ [0m[36m[1m<function syntaxerror at 0xDEADBEEF>[0m

  File "/usr/lib/python/somelib/__init__.py", line 18, in syntaxerror
    exec("foo =")
  File "<string>", line 1
    foo =
         ^

[31m[1mSyntaxError[0m:[1m invalid syntax[0m

[33m[1mTraceback (most recent call last):[0m

  File "[32mtests/exceptions/source/ownership/[0m[32m[1msyntaxerror.py[0m", line [33m14[0m, in [35mtest[0m
    [1msyntaxerror[0m[1m([0m[1m)[0m
    [36m└ [0m[36m[1m<function syntaxerror at 0xDEADBEEF>[0m

  File "/usr/lib/python/somelib/__init__.py", line 18, in syntaxerror
    exec("foo =")
  File "<string>", line 1
    foo =
         ^

[31m[1mSyntaxError[0m:[1m invalid syntax[0m

[33m[1mTraceback (most recent call last):[0m
  File "[32mtests/exceptions/source/ownership/[0m[32m[1msyntaxerror.py[0m", line [33m21[0m, in [35m<module>[0m
    [1mtest[0m[1m([0m[1mbacktrace[0m[35m[1m=[0m[36m[1mTrue[0m[1m,[0m [1mcolorize[0m[35m[1m=[0m[36m[1mTrue[0m[1m,[0m [1mdiagnose[0m[35m[1m=[0m[36m[1mFalse[0m[1m)[0m
> File "[32mtests/exceptions/source/ownership/[0m[32m[1msyntaxerror.py[0m", line [33m14[0m, in [35mtest[0m
    [1msyntaxerror[0m[1m([0m[1m)[0m
  File "/usr/lib/python/somelib/__init__.py", line 18, in syntaxerror
    exec("foo =")
  File "<string>", line 1
    foo =
         ^
[31m[1mSyntaxError[0m:[1m invalid syntax[0m

[33m[1mTraceback (most recent call last):[0m
  File "[32mtests/exceptions/source/ownership/[0m[32m[1msyntaxerror.py[0m", line [33m14[0m, in [35mtest[0m
    [1msyntaxerror[0m[1m([0m[1m)[0m
  File "/usr/lib/python/somelib/__init__.py", line 18, in syntaxerror
    exec("foo =")
  File "<string>", line 1
    foo =
         ^
[31m[1mSyntaxError[0m:[1m invalid syntax[0m

Traceback (most recent call last):
  File "tests/exceptions/source/ownership/syntaxerror.py", line 14, in test
    syntaxerror()
  File "/usr/lib/python/somelib/__init__.py", line 18, in syntaxerror
    exec("foo =")
  File "<string>", line 1
    foo =
         ^
SyntaxError: invalid syntax
